[gd_scene load_steps=6 format=2]

[ext_resource path="res://Skill_UHD.gd" type="Script" id=1]
[ext_resource path="res://Titillium-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Skill_UHD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -173.0
margin_bottom = 87.0

[node name="Attack_Power" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 30.0
margin_right = -59.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Attack Up: 0"

[node name="Shooting_Power" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 55.0
margin_right = -20.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "Shooting Up: 0"

[node name="HP_Power" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 5.0
margin_right = -58.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "HP Up: 0"
